# backend/DTOs/ApiNote.cs
@@ -9,11 +9,13 @@ public class ApiNote
         Id = projectEntity.Id;
         Title = projectEntity.Title;
         Content = projectEntity.Content;
+        DirectoryName = projectEntity.Directory?.Title ?? "";
         CreatedAt = projectEntity.CreatedAt;
     }
 
     public Guid Id { get; set; }
     public string Title { get; set; }
     public string Content { get; set; }
+    public string DirectoryName { get; set; }
     public DateTime CreatedAt { get; set; }
 }
